Refactor Assessment and BotDescription classes; improve cache implementation and enhance RequestDescriptor; Update Java 17