@@ -1,14 +1,13 @@
 package ch.javacamp.botdetector.impl.utils;
 
-import java.util.*;
+import java.util.Objects;
+import java.util.Set;
 
 public class Sets {
 
     @SafeVarargs
     public static <T> Set<T> unmodifiableSetOf(final T... elements) {
         Objects.requireNonNull(elements);
-        final Set<T> result = new HashSet<>(Arrays.asList(elements));
-        return Collections.unmodifiableSet(result);
+        return Set.of(elements);
     }
-
 }
